src/snapshots/kk__formatter__formatter_test__comment_surrounding_whitespace_should_be_trimmed.snap
---
source: src/formatter.rs
expression: "prettify_code(\"\\\"\\\"\\\"   This is a    comment   \\\"\\\"\\\" hello world\")"
---
"""
This is a    comment
"""
hello world
