src/snapshots/kk__formatter__formatter_test__comments_more_than_two_quotes_should_be_forced_newline.snap
---
source: src/formatter.rs
expression: "prettify_code(\"\\\"\\\"\\\"This is a comment \\\"\\\"\\\" hello world\")"
---
"""
This is a comment
"""
hello world
