src/snapshots/kk__formatter__formatter_test__content_after_multiline_string_should_follow_indentation.snap
---
source: src/formatter.rs
expression: "prettify_code(\"who lives in a pineapple under the sea (\\\"\\\"\\\"Hello world\\\"\\\"\\\" 234) (123) (456)\")"
---
who lives in a pineapple under the sea
  (
    """
    Hello world
    """
    234
  )
  (123)
  (456)
