src/snapshots/kk__formatter__formatter_test__infix_function_call_1.snap
---
source: src/formatter.rs
expression: "prettify_code(\"hello .replace (x .call me spongebob (yes) you are squarepants) with (y) .to string .between 1 and 3 .who lives in a pineapple under the sea\".to_string())"
---

  hello
    .replace (x .call me spongebob (yes) you are squarepants) with (y)
    .to string
    .between 1 and 3
    .who lives in a pineapple under the sea

