src/snapshots/kk__formatter__formatter_test__operator_1.snap
---
source: src/formatter.rs
expression: "prettify_code(\"who + lives + in + a + pineapple + under + the + sea ? spongebob squarepants ! absorbent - and - yellow \")"
---
who +
  lives +
    in +
      a +
        pineapple +
          under + the + sea ? spongebob squarepants ! absorbent - and - yellow
