src/snapshots/kk__formatter__formatter_test__prefix_function_call_continuous_keywords_should_be_in_one_line.snap
---
source: src/formatter.rs
expression: "prettify_code(\"export let (a b => if (condition : Boolean) (t : () -> A) else (f : () -> A) : A)\")"
---
export let
  (a b => if (condition : Boolean) (t : () -> A) else (f : () -> A) : A)
