src/snapshots/kk__formatter__formatter_test__prefix_function_call_keywords_should_be_grouped_1.snap
---
source: src/formatter.rs
expression: "prettify_code(\"if { krabby patty is alive } then { spongebob squarepants + patrick star .replace squidward with hello yo yo  yo yo yo y } else { clarinet }\".to_string())"
---

  if { krabby patty is alive }
    then
      {
        spongebob squarepants +
          patrick star .replace squidward with hello yo yo yo yo yo y
      }
    else { clarinet }

