src/snapshots/kk__formatter__formatter_test__prefix_function_call_multiple_arguments_1.snap
---
source: src/formatter.rs
expression: "prettify_code(\"x = unwrap ~ some { x = some \\\"hi\\\" .!, y = some 2 .!, z = unwrap ~ some { x = none .!, y = some 2 .! } }\")"
---
x =
  unwrap ~
    some
      {
        x = some "hi" .!,
        y = some 2 .!,
        z = unwrap ~ some { x = none .!, y = some 2 .! }
      }
